| Bug #34936 | Table can stay locked if writing of LOGREC_FILE_ID fails. | ||
|---|---|---|---|
| Submitted: | 28 Feb 2008 17:40 | Modified: | 29 Feb 2008 11:15 |
| Reporter: | Evgeniy Firsov | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Maria storage engine | Severity: | S3 (Non-critical) |
| Version: | 5.1-maria | OS: | Any |
| Assigned to: | Guilhem Bichot | CPU Architecture: | Any |
[29 Feb 2008 11:09]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/43209 ChangeSet@1.2618, 2008-02-29 12:07:31+01:00, guilhem@gbichot4.local +1 -0 Fix for BUG#34936 "Table can stay locked if writing of LOGREC_FILE_ID fails"
[29 Feb 2008 11:12]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/43210 ChangeSet@1.2617, 2008-02-29 12:11:31+01:00, guilhem@gbichot4.local +1 -0 Fix for BUG#34936 "Table can stay locked if writing of LOGREC_FILE_ID fails"
[29 Feb 2008 11:15]
Guilhem Bichot
Good catch! Thank you! I pushed the fix.

Description: int translog_assign_id_to_share(MARIA_HA *tbl_info, TRN *trn) { if (likely(share->id == 0)) { ... if (unlikely(translog_write_record(&lsn, LOGREC_FILE_ID, trn, tbl_info, (translog_size_t) (sizeof(log_data) + log_array[TRANSLOG_INTERNAL_PARTS + 1].length), sizeof(log_array)/sizeof(log_array[0]), log_array, log_data, NULL))) // is pthread_mutex_unlock(&share->intern_lock); should be here? return 1; } pthread_mutex_unlock(&share->intern_lock); return 0; } How to repeat: Get error when writing to log. Suggested fix: