Fix for BUG#34936 "Table can stay locked if writing of LOGREC_FILE_ID fails"

storage/maria/ma_loghandler.c:
  forgotten unlock